[project]
name = "gen-bi-open-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "langsmith>=0.6.7",
    "python-dotenv>=1.2.1",
]
